# poker-solver

./: .gitignore  CMakeLists.txt  README.md  notes.txt  rangesWebsite.txt  vizNotes.txt
Assets/: main.py  ranges.txt
Assets/Ranges/Bb/Sb/2bet/: ranges.txt
Assets/Ranges/Bb/Sb/3betCall/: ranges.txt
Assets/Ranges/Bb/Sb/3betRaise/: ranges.txt
Assets/Ranges/Bb/Sb/Bet/: ranges.txt
Assets/Ranges/Bb/Sb/Call/: ranges.txt
Assets/Ranges/Bb/Sb/Check/: ranges.txt
Make_ranges/: main.cpp
SolverGui/: main.cpp  notes.txt
Solver_gui/: main.cpp
data/: all_pairs.txt  combos.txt  flushes.txt
hand_rank/data/: straights.txt
hand_rank/src/: Card.cpp  Card.h  Deck.h  hand_evaluator.cpp  main.cpp  make_dics.h
make_hands/: make_hands.cpp  runme
src/: Card.cpp  Card.h  Deck.cpp  Deck.h  Head.cpp  Head.h  IMPORTANT.txt  Node.cpp  Node.h  NodeNotes.txt  TODO.txt  ThreadPool.cpp  ThreadPool.h  Tree.cpp  Tree.h  hand_evaluator.cpp  hand_evaluator.h  helperfunctions.cpp  helperfunctions.h  main.cpp  make_dics.cpp  notes.txt
